<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/gsi3001_game_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        app:layout_constraintDimensionRatio="184:69"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/capsule_231x87" />

    <TextView
        android:id="@+id/gsi3001_game_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="TextView"
        android:textAppearance="@style/medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="DAEMON X MACHINA（デモンエクスマキナ）" />

    <TextView
        android:id="@+id/gsi3001_label_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/gs3001_progress_label"
        android:textAppearance="@style/small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gsi3001_game_image"
        tools:text="進捗度" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/gsi3001_game_image"
        app:layout_constraintTop_toBottomOf="@+id/gsi3001_game_title">

        <TextView
            android:id="@+id/gsi3001_label_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gs3001_last_play_label"
            android:textAppearance="@style/small"
            android:textSize="10sp"
            tools:text="最後にプレイ : " />

        <TextView
            android:id="@+id/gsi3001_last_play_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/small"
            android:textSize="10sp"
            tools:text="7月15日" />

        <TextView
            android:id="@+id/gsi3001_label_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gs3001_separator"
            android:textAppearance="@style/small"
            android:textSize="10sp"
            tools:text=" / " />

        <TextView
            android:id="@+id/gsi3001_label4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gs3001_app_play_time_label"
            android:textAppearance="@style/small"
            android:textSize="10sp"
            tools:text=" 総プレイ時間 : " />

        <TextView
            android:id="@+id/gsi3001_all_time_play_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="35.5時間"
            android:textAppearance="@style/small"
            android:textSize="10sp"
            tools:text="35.5時間" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/gsi3001_process_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        app:layout_constraintBottom_toBottomOf="@+id/gsi3001_label_1"
        app:layout_constraintStart_toEndOf="@+id/gsi3001_label_1"
        app:layout_constraintTop_toTopOf="@+id/gsi3001_label_1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>